deploy/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ingress-cf-dns
  namespace: kube-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingress-cf-dns
  template:
    metadata:
      labels:
        app: ingress-cf-dns
    spec:
      serviceAccountName: ingress-cf-dns
      containers:
      - name: controller
        image: ghcr.io/monlor/ingress-cf-dns:main
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 256Mi
